--- a/reducer-todo/src/components/Todo.css
+++ b/reducer-todo/src/components/Todo.css
@@ -42,6 +42,17 @@ span {
   margin: 0 auto;
 }
 
+.item {
+  background-color: lightseagreen;
+  width: 45%;
+  text-align: left;
+  margin: 4px 0;
+  padding-left: 8px;
+  cursor: pointer;
+  border: white 1px solid;
+  border-radius: 10px;
+}
+
 /* .header {
   display: flex;
   justify-content: space-between;
